--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=72.1.0"]
+requires = ["setuptools>=76.0.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -7,15 +7,20 @@ name = "panopticas"
 version = "0.0.10"
 description = "The panopticas CLI tool."
 authors = [{ name = "Peter Freiberg", email = "peter.freiberg@gmail.com" }]
-dependencies = ["Click", "prettytable", "pathspec"]
+dependencies = [
+    "Click",
+    "prettytable",
+    "pathspec",
+    "twine",
+    "build",
+]
 requires-python = ">=3.11"
 readme = "README.md"
 keywords = ["analytics", "git"]
-license = { file = "LICENSE" }
+license = "MIT"
 
 classifiers = [
     "Development Status :: 3 - Alpha",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
 ]
 
