Update style to align with docs.kospex.io
https://github.com/kospex/panopticas/issues/15

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,9 @@ cython_debug/
 
 # Warp terminal configuration (user-specific)
 .warp/
+
+# Jekyll (docs/)
+docs/_site/
+docs/.jekyll-cache/
+docs/.bundle/
+docs/.sass-cache/
